# Optical-Music-Box

./: .gitignore  CMakeLists.txt
documents/: base_5_optical_music_encoding_system.md
sources/: aliases.hpp  constants.hpp  debug_utilities.hpp  main.cpp  music_box.cpp  music_box.hpp  units.hpp
sources/calibrator/: DEBUG_reference_profile.hpp  calibrator.cpp  calibrator.hpp  calibrator_constants.hpp  reference_profile.hpp
sources/color_sensors/: actions.cpp  color_sensors_constants.hpp  error_bias.hpp  sensors_manager.cpp  sensors_manager.hpp  utilities.cpp
sources/ir_sensor/: ir_manager.cpp  ir_manager.hpp  utilities.cpp
sources/light_sensor/: light_manager.cpp  light_manager.hpp  light_sensor_constants.hpp  utilities.cpp
sources/midi_unit/: actions.cpp  chord.hpp  midi_constants.hpp  midi_manager.cpp  midi_manager.hpp  utilities.cpp
sources/motor/: motor_constants.hpp  motor_manager.cpp  motor_manager.hpp  request.cpp  utilities.cpp
sources/music_data/: instrument_types.hpp  midi_command.cpp  midi_command.hpp  midi_context.hpp
sources/music_decoder/: actions.cpp  decoder_constants.hpp  music_decoder.hpp  utilities.cpp
sources/states/: calibration.cpp  configuration.cpp  loop.cpp  utilities.cpp
sources/utilities/: enum_map.hpp  ring_buffer.hpp
tools/: generate_paper_strip_svg.py
